styles: fixes in workspace dark mode

--- a/frontend/src/_styles/theme.scss
+++ b/frontend/src/_styles/theme.scss
@@ -5186,16 +5186,17 @@ div#driver-page-overlay {
 
   .org-avatar {
     display: block;
-  }
 
-  .org-avatar:hover {
     .avatar {
       background: #fcfcfc no-repeat center/cover;
     }
+  }
+
+  .org-avatar:hover {
 
     .arrow-container {
       svg {
-        filter: invert(48%) sepia(6%) saturate(6%) hue-rotate(315deg) brightness(103%) contrast(96%);
+        filter: invert(35%) sepia(17%) saturate(238%) hue-rotate(153deg) brightness(94%) contrast(89%);
       }
     }
   }
@@ -5210,7 +5211,7 @@ div#driver-page-overlay {
       height: 30px;
       width: 30px;
       padding: 0px 0px;
-      filter: invert(84%) sepia(13%) saturate(11%) hue-rotate(352deg) brightness(90%) contrast(91%);
+      filter: invert(50%) sepia(13%) saturate(208%) hue-rotate(153deg) brightness(99%) contrast(86%);
     }
   }
 
